[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pls4all-parity-generator"
version = "0.97.1"
description = "Generate pls4all parity fixtures from pinned reference PLS implementations."
authors = [{ name = "Grégory Beurier and contributors" }]
license = "CECILL-2.1"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<3",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
  "joblib>=1.4,<2"
]
# Optional external-reference packages installed alongside (May 2026):
# chemotools, pyopls, ikpls, hoggorm, mbpls, lifelines, pywavelets,
# pybaselines, oct2py.
# Cross-implementation nirs4all/R adapters will get their own locked dependency
# rows when they become active. The current preprocessing, SIMPLS, kernel,
# wide-kernel, orthogonal-scores, power, randomized-SVD, canonical, PLSSVD,
# PLS-DA, PLS-LDA, PLS-logistic, MB-PLS, LW-PLS, OPLS, OPLS-DA, SVD, PCR, regression/classification metric, variable-importance, variable-selection, interval-selection, biPLS-selection, siPLS-selection, stability-selection, UVE, EMCUVE, randomization-selection, SPA, CARS, Random Frog, SCARS, GA, Shaving, REP, IPW, ST, BVE, T2, WVC, WVC-threshold, AOM preprocessing, AOM/POP selection, component-coefficient, validation-split and CV fixtures use deterministic NumPy ports, sklearn or nirs4all bench AOM_v0;
# Savitzky-Golay preprocessing fixtures use pinned SciPy signal reference code;
# Haar wavelet denoising, OSC and EPO use deterministic NumPy references.

[project.scripts]
generate-fixtures = "pls4all_parity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
